--- a/class5_Mcdonalds.html
+++ b/class5_Mcdonalds.html
@@ -84,6 +84,19 @@
             text-align: right;
             color: #ff4500;
         }
+        .buy-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .buy-button:hover {
+            background-color: #218838;
+        }
     </style>
 </head>
 <body>
@@ -96,6 +109,7 @@
             <h2>购物车</h2>
             <div id="cart-items"></div>
             <div class="cart-total">总价：￥<span id="total-price">0</span></div>
+            <button class="buy-button" id="buy-button">购买</button>
         </div>
     </div>
 
@@ -111,8 +125,10 @@
         const menuContainer = document.getElementById("menu");
         const cartContainer = document.getElementById("cart-items");
         const totalPriceElement = document.getElementById("total-price");
+        const buyButton = document.getElementById("buy-button");
 
         const cart = {};
+        const correctPassword = "123456"; // 预设密码
 
         function updateCart() {
             cartContainer.innerHTML = "";
@@ -176,6 +192,20 @@
 
             menuItem.appendChild(quantityControls);
             menuContainer.appendChild(menuItem);
+        });
+
+        buyButton.addEventListener("click", () => {
+            const password = prompt("请输入密码进行支付：");
+            if (password === correctPassword) {
+                alert("支付成功！");
+                // 清空购物车
+                for (let itemName in cart) {
+                    cart[itemName] = 0;
+                }
+                updateCart();
+            } else {
+                alert("密码错误，请重试！");
+            }
         });
     </script>
 </body>
