--- a/class5_Mcdonalds.html
+++ b/class5_Mcdonalds.html
@@ -84,8 +84,12 @@
             text-align: right;
             color: #ff4500;
         }
-        .buy-button {
+        .buy-section {
             margin-top: 20px;
+            text-align: center;
+        }
+        .buy-button, .confirm-button {
+            margin-top: 10px;
             padding: 10px 20px;
             background-color: #28a745;
             color: white;
@@ -94,8 +98,20 @@
             cursor: pointer;
             font-size: 16px;
         }
-        .buy-button:hover {
+        .buy-button:hover, .confirm-button:hover {
             background-color: #218838;
+        }
+        .password-input {
+            margin-top: 10px;
+            display: none;
+        }
+        .password-input input {
+            padding: 10px;
+            width: 80%;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -109,7 +125,13 @@
             <h2>购物车</h2>
             <div id="cart-items"></div>
             <div class="cart-total">总价：￥<span id="total-price">0</span></div>
+        </div>
+        <div class="buy-section">
             <button class="buy-button" id="buy-button">购买</button>
+            <div class="password-input" id="password-input">
+                <input type="password" id="password-field" placeholder="请输入密码">
+                <button class="confirm-button" id="confirm-button">确认支付</button>
+            </div>
         </div>
     </div>
 
@@ -126,6 +148,9 @@
         const cartContainer = document.getElementById("cart-items");
         const totalPriceElement = document.getElementById("total-price");
         const buyButton = document.getElementById("buy-button");
+        const passwordInput = document.getElementById("password-input");
+        const passwordField = document.getElementById("password-field");
+        const confirmButton = document.getElementById("confirm-button");
 
         const cart = {};
         const correctPassword = "123456"; // 预设密码
@@ -195,7 +220,11 @@
         });
 
         buyButton.addEventListener("click", () => {
-            const password = prompt("请输入密码进行支付：");
+            passwordInput.style.display = "block";
+        });
+
+        confirmButton.addEventListener("click", () => {
+            const password = passwordField.value;
             if (password === correctPassword) {
                 alert("支付成功！");
                 // 清空购物车
@@ -203,6 +232,8 @@
                     cart[itemName] = 0;
                 }
                 updateCart();
+                passwordField.value = "";
+                passwordInput.style.display = "none";
             } else {
                 alert("密码错误，请重试！");
             }
