--- a/class5.html
+++ b/class5.html
@@ -77,21 +77,21 @@
 <body>
     <div class="container">
         <h1>带验证码的单选示例</h1>
-        <form id="radio-form">
+        <form id="checkbox-form">
             <div class="option">
-                <input type="radio" id="option1" name="choice" value="选项 1">
+                <input type="checkbox" id="option1" name="choice" value="选项 1">
                 <label for="option1">选项 1</label>
             </div>
             <div class="option">
-                <input type="radio" id="option2" name="choice" value="选项 2">
+                <input type="checkbox" id="option2" name="choice" value="选项 2">
                 <label for="option2">选项 2</label>
             </div>
             <div class="option">
-                <input type="radio" id="option3" name="choice" value="选项 3">
+                <input type="checkbox" id="option3" name="choice" value="选项 3">
                 <label for="option3">选项 3</label>
             </div>
             <div class="option">
-                <input type="radio" id="option4" name="choice" value="选项 4">
+                <input type="checkbox" id="option4" name="choice" value="选项 4">
                 <label for="option4">选项 4</label>
             </div>
 
