--- a/class5.html
+++ b/class5.html
@@ -3,56 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>带验证码的单选功能示例</title>
+    <title>多行文本域示例</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            padding: 20px;
+            margin: 0;
             background-color: #f4f4f4;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
         }
         .container {
-            width: 90%;
-            max-width: 400px;
+            max-width: 600px;
+            width: 100%;
+            padding: 20px;
             background: white;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            text-align: center;
         }
         h1 {
-            font-size: 22px;
-            color: #333;
+            font-size: 24px;
             margin-bottom: 20px;
+            color: #333;
         }
-        .option {
-            margin: 10px 0;
-            text-align: left;
-        }
-        .option input {
-            margin-right: 10px;
-        }
-        .captcha-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-        .captcha-image {
-            background-color: #ddd;
+        textarea {
+            width: 100%;
             padding: 10px;
-            font-size: 18px;
+            font-size: 16px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            text-align: center;
-            user-select: none;
+            resize: vertical;
         }
-        .captcha-input {
-            margin-left: 10px;
-            flex-grow: 1;
+        .char-count {
+            text-align: right;
+            font-size: 14px;
+            color: #555;
+            margin-top: 5px;
         }
         .submit-button {
             margin-top: 20px;
@@ -61,8 +49,8 @@
             color: white;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
             font-size: 16px;
+            cursor: pointer;
         }
         .submit-button:hover {
             background-color: #0056b3;
@@ -70,81 +58,53 @@
         .result {
             margin-top: 20px;
             font-size: 18px;
-            color: #007bff;
+            color: #28a745;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>带验证码的单选示例</h1>
-        <form id="checkbox-form">
-            <div class="option">
-                <input type="checkbox" id="option1" name="choice" value="选项 1">
-                <label for="option1">选项 1</label>
-            </div>
-            <div class="option">
-                <input type="checkbox" id="option2" name="choice" value="选项 2">
-                <label for="option2">选项 2</label>
-            </div>
-            <div class="option">
-                <input type="checkbox" id="option3" name="choice" value="选项 3">
-                <label for="option3">选项 3</label>
-            </div>
-            <div class="option">
-                <input type="checkbox" id="option4" name="choice" value="选项 4">
-                <label for="option4">选项 4</label>
-            </div>
-
-            <!-- 验证码部分 -->
-            <div class="captcha-container">
-                <div class="captcha-image" id="captcha-text">1234</div>
-                <input type="text" id="captcha-input" class="captcha-input" placeholder="输入验证码">
-            </div>
-
-            <button type="button" class="submit-button" id="submit-button">提交</button>
+        <h1>请填写您的反馈</h1>
+        <form id="feedback-form">
+            <textarea 
+                id="feedback" 
+                rows="6" 
+                placeholder="请输入您的反馈意见..." 
+                maxlength="200" 
+                required>
+            </textarea>
+            <p class="char-count">已输入 <span id="char-count">0</span>/200 字</p>
+            <button type="submit" class="submit-button">提交</button>
         </form>
         <div class="result" id="result"></div>
     </div>
 
     <script>
-        // 动态生成验证码
-        function generateCaptcha() {
-            const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-            let captcha = "";
-            for (let i = 0; i < 4; i++) {
-                captcha += characters.charAt(Math.floor(Math.random() * characters.length));
-            }
-            return captcha;
-        }
-
-        // 初始化验证码
-        const captchaText = document.getElementById("captcha-text");
-        const captchaInput = document.getElementById("captcha-input");
-        captchaText.textContent = generateCaptcha();
-
-        const submitButton = document.getElementById("submit-button");
+        const textarea = document.getElementById("feedback");
+        const charCount = document.getElementById("char-count");
+        const form = document.getElementById("feedback-form");
         const resultDiv = document.getElementById("result");
 
-        submitButton.addEventListener("click", () => {
-            const selectedOption = document.querySelector('input[name="choice"]:checked');
-            const captchaValue = captchaInput.value;
+        // 动态更新字符计数
+        textarea.addEventListener("input", () => {
+            charCount.textContent = textarea.value.length;
+        });
 
-            if (!selectedOption) {
-                resultDiv.textContent = "请选择一个选项！";
+        // 表单提交事件
+        form.addEventListener("submit", (event) => {
+            event.preventDefault(); // 阻止页面刷新
+            const feedbackValue = textarea.value.trim();
+
+            if (feedbackValue === "") {
+                resultDiv.textContent = "反馈内容不能为空！";
                 resultDiv.style.color = "red";
                 return;
             }
 
-            if (captchaValue !== captchaText.textContent) {
-                resultDiv.textContent = "验证码错误，请重试！";
-                resultDiv.style.color = "red";
-                captchaText.textContent = generateCaptcha(); // 刷新验证码
-                captchaInput.value = ""; // 清空输入框
-                return;
-            }
-
-            resultDiv.textContent = `提交成功！您选择了：${selectedOption.value}`;
-            resultDiv.style.color = "#007bff";
+            resultDiv.textContent = "提交成功！您的反馈是：" + feedbackValue;
+            resultDiv.style.color = "#28a745";
+            form.reset(); // 清空表单
+            charCount.textContent = "0"; // 重置字符计数
         });
     </script>
 </body>
