--- a/final.html
+++ b/final.html
@@ -3,6 +3,7 @@
 <head>
    <title>Welcome to Hogwarts!</title>
    <link rel="shortcut icon" href="bitbug_favicon.ico">
+   <script src="https://d3js.org/d3.v7.min.js"></script>
    <style>
       body {
          background-image: url('background.jpg');
@@ -32,111 +33,23 @@
          color: #ffcc33;
       }
 
-      h3 {
-         font-size: 2em;
-         color: #ff9933;
-      }
-
-      h4 {
-         font-size: 1.5em;
-         color: #ff6600;
-      }
-
-      div {
-         background-color: rgba(0, 0, 0, 0.6);
-         border-radius: 10px;
-         padding: 20px;
-         margin: 20px auto;
-         max-width: 800px;
-         box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-         display: inline-block;
-         text-align: center;
-      }
-
-      ul, ol {
-         margin: 20px auto;
-         padding: 0;
-         list-style-position: inside;
-         max-width: 600px;
-      }
-
-      ul li, ol li {
-         margin-bottom: 10px;
-         font-size: 1.2em;
-      }
-
-      dl {
-         text-align: center;
-      }
-
-      dl dt {
-         font-weight: bold;
-         color: #99ccff;
-         margin-top: 10px;
-      }
-
-      dl dd {
-         margin-left: 0;
-         font-size: 1.1em;
-      }
-
-      ruby rt {
-         font-size: 1.2em;
-         color: #dddddd;
-         font-style: italic;
-      }
-
-      ruby {
-         font-size: 1.5em;
-      }
-
-      q {
-         font-style: italic;
-      }
-
-      cite {
-         font-style: italic;
-         color: #cccccc;
-      }
-
-      strong {
-         color: #ffcc00;
-      }
-
-      abbr {
-         cursor: help;
-         text-decoration: underline dotted;
-      }
-
-      footer {
-         margin-top: 30px;
-         background-color: rgba(0, 0, 0, 0.8);
-         padding: 20px;
-         border-radius: 10px;
-         max-width: 800px;
-         margin: 20px auto;
-         text-align: center;
-         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      }
-
-      footer small {
-         color: #bbbbbb;
-      }
-     .chart-container {
+      .chart-container {
          background-color: rgba(0, 0, 0, 0.7);
          padding: 30px;
          margin: 30px auto;
-         max-width: 1000px;  /* 增大容器宽度 */
-         display: block;     /* 改为块级元素 */
+         max-width: 1000px;
+         display: block;
       }
-      /* 新增图表溢出处理 */
+
       #chart {
-         overflow: visible; /* 允许内容溢出 */
+         overflow: visible;
       }
+
       .bar:hover {
          filter: brightness(1.2);
          cursor: pointer;
       }
+
       .tooltip {
          position: absolute;
          padding: 10px;
@@ -155,175 +68,109 @@
          <ruby>霍<rt>táo</rt>格<rt>xué</rt>沃<rt>shèng</rt>兹<rt>dì</rt></ruby>
       </b></mark>魔法学院
    </h1>
-   <p>
-      以下是本周的
-      <strong>
-         <dfn id="课程表">
-            <abbr title="欢迎你使用时空转换器同时修很多门课噢">课程表（悬浮在这看看）</abbr>
-         </dfn>
-      </strong>
-   </p>
-   <div>
-      <h2>本周课程安排</h2>
-      <dl>
-         <dt>周一</dt>
-         <dd>变形术<br>魔法史</dd>
-         <dt>周二</dt>
-         <dd>占卜术<br>魔药课</dd>
-         <dt>周三</dt>
-         <dd>麻瓜研究<br>黑魔法防御术</dd>
-         <dt>周四</dt>
-         <dd>天文学<br>神奇动物保护课</dd>
-      </dl>
-   </div>
-   <div>
-      <h3>学院分院</h3>
-      <ul>
-         <li>格兰芬多</li>
-         <li>赫奇帕奇</li>
-         <li>拉文克劳</li>
-         <li>斯莱特林</li>
-      </ul>
-   </div>
-   <div>
-      <h4>必备魔法书单</h4>
-      <ol>
-         <li>《初级魔咒指南》</li>
-         <li>《黑魔法防御理论与实践》</li>
-         <li>《魔法药剂学入门》</li>
-      </ol>
-   </div>
-   <div>
-      <h5>校长寄语</h5>
-      <p>魔法不仅是天赋，更是一种责任。</p>
-   </div>
    
-  <div class="chart-container">
+   <div class="chart-container">
       <h2>哈利波特系列电影评分</h2>
       <div id="chart"></div>
    </div>
 
    <script>
-      // 增加错误捕获
+      // 动态创建工具提示
+      const tooltip = d3.select("body")
+        .append("div")
+        .attr("class", "tooltip")
+        .style("opacity", 0);
+
+      // 设置图表尺寸
+      const width = 900;
+      const height = 500;
+      const margin = { top: 30, right: 30, bottom: 150, left: 60 };
+
+      // 创建SVG画布
+      const svg = d3.select("#chart")
+        .append("svg")
+        .attr("width", width)
+        .attr("height", height)
+        .style("background", "rgba(0, 0, 0, 0.3)")
+        .append("g")
+        .attr("transform", `translate(${margin.left},${margin.top})`);
+
+      // 加载和处理数据
       d3.csv("哈利波特数据.csv").then(data => {
-         // 数据预处理（添加调试输出）
+         // 数据预处理
          const processedData = data
            .filter(d => d.排名 !== "无")
-           .map(d => {
-             // 调试输出原始数据
-             console.log("原始数据:", d);
-             return {
-               ...d,
-               评分: +d.评分,
-               评论人数: +d.评论人数.replace(/,/g, ''),
-               片长: +d.片长.replace("分钟", "")
-             }
-           })
-           .sort((a, b) => d3.ascending(
-             a.排名.replace("No.", ""), 
-             b.排名.replace("No.", "")
-           ));
-         
+           .map(d => ({
+             电影名: d.电影名.split(" ")[0], // 只保留中文电影名
+             评分: +d.评分 // 转换为数字
+           }))
+           .sort((a, b) => d3.ascending(a.电影名, b.电影名));
+
          console.log("处理后的数据:", processedData);
 
-         // 调整图表尺寸
-         const width = 900;  // 增大宽度
-         const height = 500; // 增大高度
-         const margin = { top: 30, right: 30, bottom: 150, left: 60 }; // 增大下边距
-
-         // 移除旧SVG（防止重复）
-         d3.select("#chart").select("svg").remove();
-
-         // 创建SVG画布
-         const svg = d3.select("#chart")
-           .append("svg")
-           .attr("width", width)
-           .attr("height", height)
-           .style("background", "rgba(0, 0, 0, 0.3)")
-           .append("g")
-           .attr("transform", `translate(${margin.left},${margin.top})`);
-
-         // 比例尺设置（添加容错处理）
+         // 比例尺设置
          const x = d3.scaleBand()
-           .domain(processedData.map(d => {
-             const title = d.电影名.split(" ")[0];
-             return title || "未知电影"; // 防止空值
-           }))
+           .domain(processedData.map(d => d.电影名))
            .range([0, width - margin.left - margin.right])
            .padding(0.2);
 
-         const yMax = d3.max(processedData, d => d.评分) || 9.2; // 默认值
          const y = d3.scaleLinear()
-           .domain([8, yMax])
+           .domain([8, d3.max(processedData, d => d.评分)])
            .range([height - margin.top - margin.bottom, 0]);
 
-         // 绘制柱状图（添加动画效果）
+         // 绘制柱状图
          svg.selectAll(".bar")
            .data(processedData)
            .enter()
            .append("rect")
            .attr("class", "bar")
-           .attr("x", d => x(d.电影名.split(" ")[0]))
+           .attr("x", d => x(d.电影名))
            .attr("width", x.bandwidth())
-           .attr("y", height - margin.top - margin.bottom) // 初始位置在底部
-           .attr("height", 0) // 初始高度为0
-           .transition()      // 添加动画
-           .duration(800)
            .attr("y", d => y(d.评分))
            .attr("height", d => height - margin.top - margin.bottom - y(d.评分))
-           .attr("fill", "#ffd700");
+           .attr("fill", "#ffd700")
+           .on("mouseover", (event, d) => {
+             tooltip.transition()
+               .duration(200)
+               .style("opacity", .9);
+             tooltip.html(`
+               <strong>${d.电影名}</strong><br>
+               评分: ${d.评分}
+             `)
+               .style("left", (event.pageX + 10) + "px")
+               .style("top", (event.pageY - 28) + "px");
+           })
+           .on("mouseout", () => {
+             tooltip.transition()
+               .duration(500)
+               .style("opacity", 0);
+           });
 
-         // 坐标轴样式优化
-         const axisStyle = {
-             "font-family": "Times New Roman",
-             "font-size": "14px",
-             "fill": "#fff"
-         };
-
-         // X轴（添加换行处理）
+         // 添加坐标轴
          svg.append("g")
            .attr("transform", `translate(0, ${height - margin.top - margin.bottom})`)
            .call(d3.axisBottom(x).tickSizeOuter(0))
            .selectAll("text")
            .attr("transform", "rotate(-45)")
            .style("text-anchor", "end")
-           .style("fill", "#fff")
-           .each(function(d) {
-             d3.select(this)
-               .html(d.replace("·", "·<br/>")); // 在·号后换行
-           });
+           .style("fill", "#fff");
 
-         // Y轴
          svg.append("g")
-           .call(d3.axisLeft(y)
-             .ticks(5)
-             .tickFormat(d => `${d}分`)
-             .tickSize(-width + margin.left + margin.right) // 添加网格线
-           )
-           .style("color", "#fff")
-           .selectAll("text")
-           .style(axisStyle);
+           .call(d3.axisLeft(y).ticks(5).tickFormat(d => `${d}分`))
+           .style("color", "#fff");
 
          // 添加图表标题
          svg.append("text")
-           .attr("x", (width - margin.left - margin.right)/2)
+           .attr("x", (width - margin.left - margin.right) / 2)
            .attr("y", -10)
            .attr("text-anchor", "middle")
            .style("font-size", "16px")
            .style("fill", "#ffd700")
-           .text("豆瓣电影评分");
-
+           .text("哈利波特系列电影评分");
       }).catch(error => {
          console.error("数据加载错误:", error);
          alert("数据加载失败，请检查控制台日志！");
       });
    </script>
-   <footer>
-      <h6><em>霍格沃兹校史</em></h6>
-      <p>
-         <q>魔法的本质是发现并创造奇迹<sup>miracles!</sup>。</q> - <cite>《霍格沃兹校史》</cite>
-      </p>
-      <small>&copy; 2024 霍格沃兹魔法学院. 魔法永存！<sub>end!</sub></small>
-   </footer>
 </body>
 </html>
