--- a/final.html
+++ b/final.html
@@ -48,7 +48,7 @@
          background-color: rgba(0, 0, 0, 0.7);
          padding: 20px;
          margin: 20px auto;
-         max-width: 800px; /* 缩小容器宽度 */
+         max-width: 1000px; /* 增大容器宽度 */
          display: block;
       }
 
@@ -161,9 +161,9 @@
         .style("opacity", 0);
 
       // 设置图表尺寸
-      const width = 700; // 缩小宽度
-      const height = 400; // 缩小高度
-      const margin = { top: 30, right: 30, bottom: 100, left: 50 }; // 调整边距
+      const width = 900; // 增大宽度
+      const height = 500; // 增大高度
+      const margin = { top: 30, right: 30, bottom: 150, left: 60 }; // 调整边距
 
       // 创建SVG画布
       const svg = d3.select("#chart")
