--- a/final.html
+++ b/final.html
@@ -96,7 +96,50 @@
          <ruby>霍<rt>táo</rt>格<rt>xué</rt>沃<rt>shèng</rt>兹<rt>dì</rt></ruby>
       </b></mark>魔法学院
    </h1>
-
+   <p>
+      以下是本周的
+      <strong>
+         <dfn id="课程表">
+            <abbr title="欢迎你使用时空转换器同时修很多门课噢">课程表（悬浮在这看看）</abbr>
+         </dfn>
+      </strong>
+   </p>
+   <div>
+      <h2>本周课程安排</h2>
+      <dl>
+         <dt>周一</dt>
+         <dd>变形术<br>魔法史</dd>
+         <dt>周二</dt>
+         <dd>占卜术<br>魔药课</dd>
+         <dt>周三</dt>
+         <dd>麻瓜研究<br>黑魔法防御术</dd>
+         <dt>周四</dt>
+         <dd>天文学<br>神奇动物保护课</dd>
+      </dl>
+   </div>
+   <div>
+      <h3>学院分院</h3>
+      <ul>
+         <li>格兰芬多</li>
+         <li>赫奇帕奇</li>
+         <li>拉文克劳</li>
+         <li>斯莱特林</li>
+      </ul>
+   </div>
+   <div>
+      <h4>必备魔法书单</h4>
+      <ol>
+         <li>《初级魔咒指南》</li>
+         <li>《黑魔法防御理论与实践》</li>
+         <li>《魔法药剂学入门》</li>
+      </ol>
+   </div>
+   <div>
+      <h5>校长寄语</h5>
+      <p>魔法不仅是天赋，更是一种责任。</p>
+   </div>
+   
+   <!-- 图表容器 -->
    <div class="chart-container">
       <h2>哈利波特系列电影评分</h2>
       <div id="chart"></div>
@@ -120,7 +163,7 @@
       // 设置图表尺寸
       const width = 900; // 增大宽度
       const height = 500; // 增大高度
-      const margin = { top: 30, right: 30, bottom: 150, left: 60 }; // 调整边距
+      const margin = { top: 50, right: 50, bottom: 100, left: 70 }; // 调整边距
 
       // 创建SVG画布
       const svg = d3.select("#chart")
@@ -189,7 +232,7 @@
            .attr("transform", "rotate(-45)")
            .style("text-anchor", "end")
            .style("fill", "#fff")
-           .style("font-size", "14px");
+           .style("font-size", "12px");
 
          // 添加Y轴
          svg.append("g")
@@ -197,13 +240,13 @@
            .style("color", "#fff")
            .selectAll("text")
            .style("fill", "#fff")
-           .style("font-size", "14px");
+           .style("font-size", "12px");
 
          // 添加Y轴标签
          svg.append("text")
            .attr("transform", "rotate(-90)")
-           .attr("y", -margin.left + 10)
-           .attr("x", -(height / 2))
+           .attr("y", -margin.left + 20) // 调整Y轴标签位置
+           .attr("x", -(height / 2 - margin.top))
            .attr("dy", "1em")
            .style("text-anchor", "middle")
            .style("fill", "#fff")
@@ -213,7 +256,7 @@
          // 添加X轴标签
          svg.append("text")
            .attr("x", (width - margin.left - margin.right) / 2)
-           .attr("y", height - margin.bottom + 40)
+           .attr("y", height - margin.bottom + 60) // 调整X轴标签位置
            .style("text-anchor", "middle")
            .style("fill", "#fff")
            .style("font-size", "14px")
