--- a/final.html
+++ b/final.html
@@ -54,6 +54,7 @@
 
       #chart {
          overflow: visible;
+         margin: 0 auto; /* 确保图表居中 */
       }
 
       .bar {
@@ -161,9 +162,9 @@
         .style("opacity", 0);
 
       // 设置图表尺寸
-      const width = 1000; // 增大宽度
+      const width = 900; // 增大宽度
       const height = 500; // 增大高度
-      const margin = { top: 50, right: 50, bottom: 120, left: 80 }; // 调整边距
+      const margin = { top: 50, right: 50, bottom: 100, left: 70 }; // 调整边距
 
       // 创建SVG画布
       const svg = d3.select("#chart")
@@ -232,8 +233,7 @@
            .attr("transform", "rotate(-45)")
            .style("text-anchor", "end")
            .style("fill", "#fff")
-           .style("font-size", "12px")
-           .attr("dy", "0.5em"); // 调整文本位置
+           .style("font-size", "12px");
 
          // 添加Y轴
          svg.append("g")
@@ -245,14 +245,23 @@
 
          // 添加Y轴标签
          svg.append("text")
-           .attr("transform", "rotate(-90)")
-           .attr("y", -margin.left + 20) // 调整Y轴标签位置
-           .attr("x", -(height / 2 - margin.top))
-           .attr("dy", "1em")
-           .style("text-anchor", "middle")
-           .style("fill", "#fff")
-           .style("font-size", "14px")
-           .text("评分");
+            .attr("transform", "rotate(-90)")
+            .attr("y", -margin.left + 30) // 调整Y轴标签位置
+            .attr("x", -(height / 2 - margin.top))
+            .attr("dy", "1em")
+            .style("text-anchor", "middle")
+            .style("fill", "#fff")
+            .style("font-size", "14px")
+            .text("评分");
+
+         // 添加X轴标签
+         svg.append("text")
+            .attr("x", (width - margin.left - margin.right) / 2)
+            .attr("y", height - margin.bottom + 80) // 调整X轴标签位置
+            .style("text-anchor", "middle")
+            .style("fill", "#fff")
+            .style("font-size", "14px")
+            .text("电影名称");
 
       }).catch(error => {
          console.error("数据加载错误:", error);
