--- a/final.html
+++ b/final.html
@@ -48,7 +48,7 @@
          background-color: rgba(0, 0, 0, 0.7);
          padding: 20px;
          margin: 20px auto;
-         max-width: 1000px; /* 增大容器宽度 */
+         max-width: 1200px; /* 增大容器宽度 */
          display: block;
       }
 
@@ -162,9 +162,9 @@
         .style("opacity", 0);
 
       // 设置图表尺寸
-      const width = 900; // 增大宽度
+      const width = 1100; // 增大宽度
       const height = 500; // 增大高度
-      const margin = { top: 50, right: 50, bottom: 100, left: 70 }; // 调整边距
+      const margin = { top: 50, right: 50, bottom: 120, left: 70 }; // 调整边距
 
       // 创建SVG画布
       const svg = d3.select("#chart")
@@ -230,7 +230,7 @@
            .attr("transform", `translate(0, ${height - margin.top - margin.bottom})`)
            .call(d3.axisBottom(x).tickSizeOuter(0))
            .selectAll("text")
-           .attr("transform", "rotate(-45)")
+           .attr("transform", "rotate(-30)") // 调整旋转角度为30度
            .style("text-anchor", "end")
            .style("fill", "#fff")
            .style("font-size", "12px");
@@ -243,21 +243,10 @@
            .style("fill", "#fff")
            .style("font-size", "12px");
 
-         // 添加Y轴标签
-         svg.append("text")
-            .attr("transform", "rotate(-90)")
-            .attr("y", -margin.left + 30) // 调整Y轴标签位置
-            .attr("x", -(height / 2 - margin.top))
-            .attr("dy", "1em")
-            .style("text-anchor", "middle")
-            .style("fill", "#fff")
-            .style("font-size", "14px")
-            .text("评分");
-
          // 添加X轴标签
          svg.append("text")
             .attr("x", (width - margin.left - margin.right) / 2)
-            .attr("y", height - margin.bottom + 80) // 调整X轴标签位置
+            .attr("y", height - margin.bottom + 90) // 调整X轴标签位置
             .style("text-anchor", "middle")
             .style("fill", "#fff")
             .style("font-size", "14px")
