--- a/final.html
+++ b/final.html
@@ -58,6 +58,7 @@
       #chart {
          overflow: visible;
          margin: 0 auto; /* 确保图表居中 */
+         width: 100%; /* 使图表宽度占满容器 */
       }
 
       .bar {
