--- a/final.html
+++ b/final.html
@@ -45,32 +45,27 @@
       }
 
       .chart-container {
-         background-color: rgba(0, 0, 0, 0.7);
+         width: 100%;
+         max-width: 1200px;
+         height: auto;
+         margin: 0 auto;
          padding: 20px;
-         margin: 0 auto; /* 确保容器居中 */
-         max-width: 1200px; /* 增大容器宽度 */
-         display: flex;
-         justify-content: center; /* 内容居中 */
-         align-items: center;
-         flex-direction: column;
+         background-color: rgba(0, 0, 0, 0.7);
       }
 
       #chart {
+         width: 100%;
+         height: auto;
          overflow: visible;
-         margin: 0 auto; /* 确保图表居中 */
-         width: 100%; /* 使图表宽度占满容器 */
-         display: flex;
-         justify-content: center; /* 内容居中 */
-         align-items: center;
       }
 
       .bar {
-         fill: #ffcc00; /* 更柔和的黄色 */
-         transition: fill 0.3s ease; /* 添加颜色过渡效果 */
+         fill: #ffcc00;
+         transition: fill 0.3s ease;
       }
 
       .bar:hover {
-         fill: #ff9900; /* 悬停时更深的橙色 */
+         fill: #ff9900;
          cursor: pointer;
       }
 
@@ -169,9 +164,11 @@
         .style("opacity", 0);
 
       // 设置图表尺寸
-      const width = 1100; // 增大宽度
-      const height = 500; // 增大高度
-      const margin = { top: 50, right: 50, bottom: 120, left: 70 }; // 调整边距
+      const width = document.querySelector('.chart-container').clientWidth; // 动态宽度
+      const height = 500; // 固定高度
+      const margin = { top: 20, right: 20, bottom: 50, left: 50 }; // 调整边距
+      const innerWidth = width - margin.left - margin.right; // 内部宽度
+      const innerHeight = height - margin.top - margin.bottom; // 内部高度
 
       // 创建SVG画布
       const svg = d3.select("#chart")
@@ -179,8 +176,8 @@
         .attr("width", width)
         .attr("height", height)
         .style("background", "rgba(0, 0, 0, 0.3)")
-        .style("display", "block") // 确保SVG本身是块级元素
-        .style("margin", "0 auto") // 确保SVG居中
+        .style("display", "block")
+        .style("margin", "0 auto")
         .append("g")
         .attr("transform", `translate(${margin.left},${margin.top})`);
 
@@ -200,12 +197,12 @@
          // 比例尺设置
          const x = d3.scaleBand()
            .domain(processedData.map(d => d.电影名))
-           .range([0, width - margin.left - margin.right])
+           .range([0, innerWidth])
            .padding(0.2);
 
          const y = d3.scaleLinear()
            .domain([8, d3.max(processedData, d => d.评分)])
-           .range([height - margin.top - margin.bottom, 0]);
+           .range([innerHeight, 0]);
 
          // 绘制柱状图
          svg.selectAll(".bar")
@@ -216,7 +213,7 @@
            .attr("x", d => x(d.电影名))
            .attr("width", x.bandwidth())
            .attr("y", d => y(d.评分))
-           .attr("height", d => height - margin.top - margin.bottom - y(d.评分))
+           .attr("height", d => innerHeight - y(d.评分))
            .on("mouseover", (event, d) => {
              tooltip.transition()
                .duration(200)
@@ -236,10 +233,10 @@
 
          // 添加X轴
          svg.append("g")
-           .attr("transform", `translate(0, ${height - margin.top - margin.bottom})`)
+           .attr("transform", `translate(0, ${innerHeight})`)
            .call(d3.axisBottom(x).tickSizeOuter(0))
            .selectAll("text")
-           .attr("transform", "rotate(-30)") // 调整旋转角度为30度
+           .attr("transform", "rotate(-30)")
            .style("text-anchor", "end")
            .style("fill", "#fff")
            .style("font-size", "12px");
@@ -254,8 +251,8 @@
 
          // 添加X轴标签
          svg.append("text")
-            .attr("x", (width - margin.left - margin.right) / 2)
-            .attr("y", height - margin.bottom + 90) // 调整X轴标签位置
+            .attr("x", innerWidth / 2)
+            .attr("y", innerHeight + 40)
             .style("text-anchor", "middle")
             .style("fill", "#fff")
             .style("font-size", "14px")
