--- a/final.html
+++ b/final.html
@@ -164,15 +164,16 @@
 
       // 设置图表尺寸
       const containerWidth = document.querySelector('.chart-container').clientWidth; // 动态宽度
+      const svgWidth = containerWidth * 0.9; // SVG 宽度为容器的 90%
       const height = 500; // 固定高度
       const margin = { top: 20, right: 20, bottom: 100, left: 50 }; // 调整边距，底部边距增大以显示电影名称
-      const innerWidth = containerWidth - margin.left - margin.right; // 内部宽度
+      const innerWidth = svgWidth - margin.left - margin.right; // 内部宽度
       const innerHeight = height - margin.top - margin.bottom; // 内部高度
 
       // 创建SVG画布
       const svg = d3.select(".chart-container")
         .append("svg")
-        .attr("width", containerWidth)
+        .attr("width", svgWidth) // 使用调整后的宽度
         .attr("height", height)
         .style("background", "rgba(0, 0, 0, 0.3)")
         .style("display", "block")
