--- a/final.html
+++ b/final.html
@@ -147,6 +147,147 @@
       <!-- SVG 直接放在 .chart-container 中 -->
    </div>
 
+
+   <!-- 电影详细信息容器 -->
+<div>
+   <h2>哈利波特系列电影详细信息</h2>
+   
+   <!-- 第一部电影 -->
+   <div>
+      <h3>No.28 哈利·波特与魔法石</h3>
+      <p><strong>片长:</strong> 152分钟</p>
+      <p><strong>评分:</strong> 9.2</p>
+      <p><strong>星级:</strong> 4.5</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 66.0%</li>
+         <li>4星: 28.1%</li>
+         <li>3星: 5.5%</li>
+         <li>2星: 0.3%</li>
+         <li>1星: 0.1%</li>
+      </ul>
+      <p><strong>简介:</strong> 哈利波特是一个孤儿，从小寄养在姨妈家，受尽欺凌。但就在哈利11岁生日的时候，他意外收到了霍格沃茨学院的入学通知书。哈利从该学院派来接他的巨人海格口中得知，这是一间魔法学院，并得知了自己的身世，原来哈利的父母都是伟大的魔法师，在对付伏地魔的战斗中双双献身，唯有哈利幸免于难。</p>
+   </div>
+
+   <!-- 第二部电影 -->
+   <div>
+      <h3>No.69 哈利·波特与死亡圣器(下)</h3>
+      <p><strong>片长:</strong> 130分钟</p>
+      <p><strong>评分:</strong> 9.0</p>
+      <p><strong>星级:</strong> 4.5</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 59.9%</li>
+         <li>4星: 31.3%</li>
+         <li>3星: 8.1%</li>
+         <li>2星: 0.6%</li>
+         <li>1星: 0.2%</li>
+      </ul>
+      <p><strong>简介:</strong> 当又一次和伏地魔的意识连通，哈利·波特断定最后一件魂器藏在霍格沃茨，于是和罗恩、赫敏一同返回阴云密布的学校。在好友们的帮助下，他们成功驱逐了斯内普，然而觉察到哈利目的的伏地魔则率领徒众向霍格沃茨逼近。</p>
+   </div>
+
+   <!-- 第三部电影 -->
+   <div>
+      <h3>No.76 哈利·波特与阿兹卡班的囚徒</h3>
+      <p><strong>片长:</strong> 141分钟</p>
+      <p><strong>评分:</strong> 9.0</p>
+      <p><strong>星级:</strong> 4.5</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 57.9%</li>
+         <li>4星: 33.8%</li>
+         <li>3星: 7.8%</li>
+         <li>2星: 0.4%</li>
+         <li>1星: 0.1%</li>
+      </ul>
+      <p><strong>简介:</strong> 哈利即将在霍格沃兹渡过第三个年头，此时在阿兹塔班却传出恶棍小天狼星越狱的消息。据说小天狼星正是背叛哈利父母的好友，他的教父，而这次小天狼星越狱似乎正是为了找他。</p>
+   </div>
+
+   <!-- 第四部电影 -->
+   <div>
+      <h3>No.89 哈利·波特与密室</h3>
+      <p><strong>片长:</strong> 161分钟</p>
+      <p><strong>评分:</strong> 8.9</p>
+      <p><strong>星级:</strong> 4.5</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 54.1%</li>
+         <li>4星: 36.8%</li>
+         <li>3星: 8.5%</li>
+         <li>2星: 0.4%</li>
+         <li>1星: 0.1%</li>
+      </ul>
+      <p><strong>简介:</strong> 哈利波特结束了假期，即将回到霍格沃兹继续学习魔法。一个叫多比的家养小精灵警告哈利不要回到霍格沃兹，否则会陷入极大的危险。哈利没有听从多比的劝告，回到了霍格沃兹。</p>
+   </div>
+
+   <!-- 第五部电影 -->
+   <div>
+      <h3>哈利·波特与混血王子</h3>
+      <p><strong>片长:</strong> 153分钟</p>
+      <p><strong>评分:</strong> 8.3</p>
+      <p><strong>星级:</strong> 4.0</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 40.7%</li>
+         <li>4星: 38.6%</li>
+         <li>3星: 18.2%</li>
+         <li>2星: 2.1%</li>
+         <li>1星: 0.3%</li>
+      </ul>
+      <p><strong>简介:</strong> 哈利·波特与混血王子的故事继续展开，哈利在霍格沃茨的第六年，伏地魔的威胁日益逼近，哈利和邓布利多开始寻找击败伏地魔的方法。</p>
+   </div>
+
+   <!-- 第六部电影 -->
+   <div>
+      <h3>No.121 哈利·波特与火焰杯</h3>
+      <p><strong>片长:</strong> 157分钟</p>
+      <p><strong>评分:</strong> 8.8</p>
+      <p><strong>星级:</strong> 4.5</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 51.8%</li>
+         <li>4星: 37.8%</li>
+         <li>3星: 9.7%</li>
+         <li>2星: 0.6%</li>
+         <li>1星: 0.1%</li>
+      </ul>
+      <p><strong>简介:</strong> 这是一个不同寻常的学期，魔法学校的盛事：三强争霸赛在霍格沃茨举行。学生们争先报名，希翼获得永恒无上的荣誉。火焰杯在选出三所学校的三名勇士后，竟将未足年龄的哈利也挑选出来。</p>
+   </div>
+
+   <!-- 第七部电影 -->
+   <div>
+      <h3>No.234 哈利·波特与凤凰社</h3>
+      <p><strong>片长:</strong> 138分钟</p>
+      <p><strong>评分:</strong> 8.5</p>
+      <p><strong>星级:</strong> 4.5</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 44.0%</li>
+         <li>4星: 40.6%</li>
+         <li>3星: 14.2%</li>
+         <li>2星: 1.0%</li>
+         <li>1星: 0.2%</li>
+      </ul>
+      <p><strong>简介:</strong> 逃过摄魂怪的追杀，通过魔法部的审查，哈利终于回到美丽的霍格沃兹。然而这个学期并不轻松，他不仅要完成魔法等级考试，还要应对夜晚的噩梦和黑魔法防御课老师乌姆里奇的打压。</p>
+   </div>
+
+   <!-- 第八部电影 -->
+   <div>
+      <h3>No.220 哈利·波特与死亡圣器(上)</h3>
+      <p><strong>片长:</strong> 146分钟</p>
+      <p><strong>评分:</strong> 8.6</p>
+      <p><strong>星级:</strong> 4.5</p>
+      <p><strong>评分占比:</strong></p>
+      <ul>
+         <li>5星: 44.8%</li>
+         <li>4星: 40.5%</li>
+         <li>3星: 13.3%</li>
+         <li>2星: 1.1%</li>
+         <li>1星: 0.3%</li>
+      </ul>
+      <p><strong>简介:</strong> 邓不利多死后，伏地魔与食死徒入侵魔法学校，魔法部也被伏地魔的爪牙操控，邪恶的阴云笼罩魔法世界上空。在哈利·波特17岁生日之际，凤凰社成员及一众好友护送他回到了凤凰社的据点陋居，然而这立即遭到食死徒毁灭性地打击。</p>
+   </div>
+</div>
    <footer>
       <h6><em>霍格沃兹校史</em></h6>
       <p>
